organize files and folders

--- a/ny/group1/css/header.css
+++ b/ny/group1/css/header.css
@@ -1,7 +1,6 @@
-
 @font-face {
     font-family: 'OldeEnglish';
-    src: url(fonts/OldeEnglish.ttf);
+    src: url(../statics/fonts/OldeEnglish.ttf);
 }
 
 /**{
@@ -20,35 +19,35 @@ body{
     display: flex;
     justify-content: center;
 }*/
-.box-titulo{
+
+.box-titulo {
     font-size: 30px;
     font-family: 'OldeEnglish';
     margin: 0 50px 0 0;
 }
 
-.box-top{
+.box-top {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 2px;
     padding: 5px;
-    
 }
 
-.box-weather{
+.box-weather {
     font-size: 12px;
 }
 
-.box-date{
+.box-date {
     font-size: 12px;
 }
 
-.box-nav-bar{
+.box-nav-bar {
     display: flex;
     justify-items: center;
 }
 
-#nav-bar{
+#nav-bar {
     display: flex;
     justify-content: space-around;
     /*margin: 0 0 0 20px;*/
@@ -59,12 +58,12 @@ body{
     justify-items: center;
 }
 
-#nav-bar .link-nav-bar{
+#nav-bar .link-nav-bar {
     float: left;
     justify-content: center;
 }
 
-#nav-bar .link-nav{
+#nav-bar .link-nav {
     margin: 2px;
     font-size: 12px;
     display: block;
@@ -75,9 +74,8 @@ body{
     align-items: center;
 }
 
-#nav-bar .link-nav:hover{
+#nav-bar .link-nav:hover {
     background: rgb(238, 237, 237);
     border-radius: 5px;
     transition: 1s;
 }
-
