--- a/ny/group2/css/secondpagestyle.css
+++ b/ny/group2/css/secondpagestyle.css
@@ -24,8 +24,10 @@ ul{
     
 }
 footer{
+    
     display: flex;
     padding: 10px;
+    justify-content: space-around;
     
 
 }
@@ -36,4 +38,12 @@ span{
 a{
     text-decoration: none;
     color: black;
+}
+hr{
+    padding: 0 60px;
+    border-top: 1px solid rgb(190, 190, 190);
+}
+h3 {
+    margin-left: 40px;
+    font-size: 20px;
 }
