feature: add news-main and node_modules

--- a/ny/group1/css/style.css
+++ b/ny/group1/css/style.css
@@ -51,7 +51,6 @@ body {
 hr {
     margin: 2px;
 }
-
 .principal {
     display: flex;
 }
@@ -85,4 +84,74 @@ hr {
 .secundario p {
     font-size: 14px;
     color: #5e5e5e;
+}
+
+/*news people*/
+.news-people {
+    display: flex;
+    justify-content: space-between;
+}
+.people-1, .people-2, .people-3 {
+    display: flex;
+    width: 33%;
+}
+.people-1{
+    justify-content: space-around;
+}
+.people-2 {
+    border-left: 0.5px solid #aaaaaa;
+    border-right: 0.5px solid #aaaaaa;
+    justify-content: space-around;
+}
+.people-3 {
+    justify-content: space-around;
+}
+.people__title {
+    font-size: 14px;
+}
+.people__desc {
+    font-size: 14px;
+}
+.people__img {
+    background-color: greenyellow;
+    width: 120px;
+    height: 120px;
+    margin-top: 8px;
+}
+
+/*news main*/
+.topics-news{
+    
+}
+#news, #opinion, #arts, #living {
+    display: flex;
+    justify-content: start;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.topcs-news__element{
+    width: 19%;
+    margin: 0 6px;
+}
+.topics__titles {
+    font-size: 14px;
+    padding-top: 40px;
+}
+.element__title {
+    font-size: 12px;
+    padding: 0;
+    padding-top: 10px;
+    margin: 3px;
+}
+.element__desc {
+    font-size: 12px;
+    width: 213px;
+}
+.element__link {
+    text-decoration: none;
+    color: #000000;
+}
+.element__desc:hover {
+    color: #686868;
+    transition: 0.5s;
 }
