--- a/ny/group3/CSS/morenews.css
+++ b/ny/group3/CSS/morenews.css
@@ -6,20 +6,10 @@
   color: #000000;
 }
 
-main {
+#section-3 {
   display: flex;
   justify-content: center;
-}
 
-#section-3 {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 70px;
-    margin-right: 70px;
-    margin-top: 10px;
-    max-width: 1200px;
-    max-height: 430px;
-    padding-top: 20px;
 }
 
 .container__title {
@@ -27,8 +17,8 @@ main {
   margin-right: 70px;
   margin-top: 10px;
   padding-top: 20px;
+  border-top: solid 1px #000000;
 }
-
 
 .container{
     display: flex;
@@ -77,7 +67,6 @@ main {
   max-width: 860px;
   max-height: 120px;
   margin-top: 10px;
-
 }
 
 .newsbot__right {
