--- a/ny/group3/CSS/news.css
+++ b/ny/group3/CSS/news.css
@@ -21,11 +21,14 @@
     margin-left: 80px;
     margin-right: 70px;
     margin-top: 30px;
+    padding-top: 10px;
+    border-top: solid 1px gray;
 }
 
 .news__container{
     display: flex;
     flex-wrap: nowrap;
+    border-bottom: solid 1px gray;
 }
 
 img{
