--- a/ny/group3/CSS/style.css
+++ b/ny/group3/CSS/style.css
@@ -1,1 +1,6 @@
 @import url("estilo.css");
+@import url("header.css");
+@import url("hero.css");
+@import url("morenews.css");
+@import url("scienceandhealth.css");
+@import url("second-section.css");
