--- a/ny/group3/CSS/morenews.css
+++ b/ny/group3/CSS/morenews.css
@@ -1,15 +1,8 @@
-* {
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  box-sizing: border-box;
-  color: #000000;
-}
 
 #section-3 {
   display: flex;
   justify-content: center;
-
+  margin: 30px;
 }
 
 .container__title {
