--- a/ny/group3/CSS/pag2.css
+++ b/ny/group3/CSS/pag2.css
@@ -1,15 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  box-sizing: border-box;
-  color: #000000;
 
-}
-
-body{
-    height: 100vh;   
-}
 
 #container {
     display: flex;
@@ -17,7 +6,11 @@ body{
     text-align: center;
 }
 
-#container h1, h3 {
+#container h1 {
+    text-align: center;
+    padding-top: 10px;
+}
+#container h3 {
     text-align: center;
     padding-top: 10px;
 }
