--- a/ny/group3/HTML/Footer/style.css
+++ b/ny/group3/HTML/Footer/style.css
@@ -26,6 +26,7 @@
     justify-content: space-around;
     max-width: 1200px;
     font-size: 0.9em;
+    margin: 0 30px;
 }
 
 li{
@@ -63,5 +64,6 @@ a:hover{
     display: flex;
     justify-content: space-between;
     padding: 8px;
+    
     color:rgb(110, 110, 110);
 }
