--- a/ny/group3/CSS/popular.css
+++ b/ny/group3/CSS/popular.css
@@ -1,4 +1,5 @@
 @charset "UTF-8"
+
 *{
     color: black;
 }
@@ -7,17 +8,22 @@ img{
     max-width: 215px;
     max-height: 140px;
 }
+
 div{
     display: flex;
 }
 
-h3{
+.title h3{
     margin-left: 65px;
     margin-top: 30px;
 }
 
 a{
     text-decoration: none;
+}
+
+.title{
+    margin-left: 45px;
 }
 
 .noticias{
@@ -27,7 +33,7 @@ a{
 }
 
 strong:hover{
-    color:rgb(111,111,111) ;
+    color:rgb(111,111,111);
 }
 
 li.paragrafo{
