--- a/ny/group2/css/secondpagestyle.css
+++ b/ny/group2/css/secondpagestyle.css
@@ -1,36 +1,108 @@
-h1{
-    text-align: center;
+*,
+*::before,
+*::after{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-nav {
-    top: 0;
-    position: relative;
-    z-index: 902;
-    margin-left: 40px;
+a{
+    color: inherit ;
+    text-decoration: none;
+    padding: 5px 0;
+}
+
+a:hover{
+    background-color: var(--color-button-hover);  
+}
+
+:root{
+    --title-color: rgb(0, 0, 0);
+    --text-color: rgb(61, 61, 61);
+    --background-color: rgb(243, 243, 243);
+    --color-button-hover: rgb(235, 235, 235);
+    --primary-font: 500 1rem/1.5 'Source Sans Pro', sans-serif;
+    --serif-font: 500 1rem/1.5 'Crimson Text', serif;
+    --title-font: 400 1rem/1.5 'kingthings_spikelessregular', serif;
+}
+body{
+    max-width: 1280px;
+    width: 100%;
+    margin: 0 auto;
+    background-color: var(--background-color);
+    font: var(--primary-font);
+    font-size: 16px;
+
+}
+
+.title-header{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 0; 
+}
+
+.title-header__h1{
+    font: var(--title-font);
+    font-size: 4rem;
+}
+
+.navbar{
+    padding: 0 60px;
+    border-top: 1px solid rgb(190, 190, 190);
+}
+
+.navigation-menu-header{
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    padding: 10px 0;
+}
+
+.navigations-header{
+    height: 15px;
+    margin-top: 1px;
+    font: var(--primary-font);
+    font-size: 0.75rem;
+}
+
+.container-links-header{
+    display: flex;
+    font-size: 14px; 
+    padding: 8px 0;
+    border-top: 1px solid rgb(0, 0, 0);
+    border-bottom: 4px double rgba(0, 0, 0);
+}
+
+main {
+    padding: 30px;
     display: flex;
     justify-content: center;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.menu {
-    list-style: none;
-    display: inline-flex;
-    margin-block-end: 2em;
+
+.img-principal {
+    
+     display: contents;
+    
 }
-.menu{
-    margin-left: 15px;
-    direction: rtl;
+
+.Buttons {
+    padding: 20px;
 }
 
 ul{
     list-style: none;
     
 }
+
 footer{
     
     display: flex;
     padding: 10px;
-    justify-content: space-around;
-    
+    justify-content: space-around;    
 
 }
+
 span{
     font-weight: bold;
 }
@@ -39,10 +111,12 @@ a{
     text-decoration: none;
     color: black;
 }
+
 hr{
     padding: 0 60px;
     border-top: 1px solid rgb(190, 190, 190);
 }
+
 h3 {
     margin-left: 40px;
     font-size: 20px;
