--- a/ny/group1/css/style.css
+++ b/ny/group1/css/style.css
@@ -37,8 +37,17 @@ body {
     margin: 0;
     padding: 0;
     padding-left: 20px;
+    
 }
-
+.text__link {
+    color: black;
+}
+.text__link:hover {
+    color: #535353;
+}
+.hero__h2 {
+    font-size: 16px;
+}
 .hero__h3 {
     font-size: 12px;
 }
@@ -51,37 +60,36 @@ body {
 hr {
     margin: 2px;
 }
-.principal {
+.hero__dest {
     display: flex;
 }
-.imgs {
+.hero__imgs {
     width: 460px;
     height: 300px;
-    background-color: firebrick;
 }
-.legendas p {
+.hero__image p {
     font-size: 14px;
 }
-.legendas span {
+.hero__image span {
     font-size: 12px;
     color: red;
     font-weight: bold;
 }
-.principal li {
+.hero__dest li {
     font-size: 14px;
     color: #5e5e5e;
-    margin: 10px;
+    margin: 10px;    
 }
-.secundario {
+.hero__related {
     width: 350px;
     border-left: 0.5px solid #aaaaaa;
     margin-left: 15px;
     padding-left: 5px;
 }
-.secundario h2 {
+.hero__related h2 {
     font-size: 16px;
 }
-.secundario p {
+.hero__related p {
     font-size: 14px;
     color: #5e5e5e;
 }
@@ -113,16 +121,11 @@ hr {
     font-size: 14px;
 }
 .people__img {
-    background-color: greenyellow;
-    width: 120px;
-    height: 120px;
     margin-top: 8px;
 }
 
 /*news main*/
-.topics-news{
-    
-}
+
 #news, #opinion, #arts, #living {
     display: flex;
     justify-content: start;
