--- a/ny/group1/css/science.css
+++ b/ny/group1/css/science.css
@@ -3,6 +3,10 @@
     justify-content: space-between;
 }
 
+.box-title-science{
+    margin-bottom: 0;
+}
+
 .science-3, .science-2, .science-1{
     height: 324px;
     margin: 0 5px 0 0;
@@ -18,6 +22,7 @@
 
 .img-science-2{
     width: 328px;
+    margin-left: 20px;
 }
 
 .science-news-2{
@@ -31,7 +36,7 @@
 
 .p-science-news-3{
     font-size: 0.875rem;
-    margin: 2px 0;
+    margin: 0;
 }
 
 .title-news-science-3{
@@ -42,9 +47,19 @@
 .p-science-1{
     width: 220px;
     height: 234px;
-    font-size: 0.875rem
+    font-size: 0.875rem;
 }
 
 .h-science-1{
     width: 220px;
+    margin: 0;
+}
+
+.h5-science{
+    margin-bottom: 5px;
+}
+
+.link-science{
+    text-decoration: none;
+    color: #000;
 }
