--- a/ny/group3/CSS/pag2.css
+++ b/ny/group3/CSS/pag2.css
@@ -1,23 +1,17 @@
-
-
-#container {
-    display: flex;
-    justify-content: center;
+.conteudo{
     text-align: center;
+    padding: 40px 0;
 }
 
-#container h1 {
-    text-align: center;
-    padding-top: 10px;
-}
-#container h3 {
-    text-align: center;
-    padding-top: 10px;
+.title-information{
+    font-size: 32px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 30px 0;
 }
 
-#container img {
-    padding: 20px 10px;
-    max-width: 590px;
-    max-height: 390px;
+.information{
+    max-width: 700px;
 }
+
+
 
