--- a/ny/group3/CSS/news.css
+++ b/ny/group3/CSS/news.css
@@ -6,6 +6,11 @@
     color: #000000; 
   }
 
+  #section-7{
+    display: flex;
+    flex-wrap: wrap;
+  }
+
 .section-news{
     display: flex;
     flex-wrap: wrap;
