--- a/ny/group3/CSS/scienceandhealth.css
+++ b/ny/group3/CSS/scienceandhealth.css
@@ -5,17 +5,19 @@
     box-sizing: border-box;
     color: #000000;
   }
-  
-  
-  #section-7 {
-      display: flex;
-      flex-wrap: wrap;
-      margin-left: 70px;
-      margin-right: 70px;
-      margin-top: 10px;
-      max-width: 1200px;
-      max-height: 300px;
-      padding-top: 20px;
+    
+  .section-6__container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin-left: 0px;
+    margin-right: 70px;
+    margin-top: 10px;
+    max-width: 1200px;
+    max-height: 300px;
+    padding-top: 20px;
   }
   
   .container__title {
