--- a/ny/group2/css/kingthingsspikeless_regular_macroman/stylesheet.css
+++ b/ny/group2/css/kingthingsspikeless_regular_macroman/stylesheet.css
@@ -1,11 +1,6 @@
 @font-face {
     font-family: 'kingthings_spikelessregular';
-    src: url('Kingthings_Spikeless-webfont.eot');
-    src: url('Kingthings_Spikeless-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Kingthings_Spikeless-webfont.woff2') format('woff2'),
-         url('Kingthings_Spikeless-webfont.woff') format('woff'),
-         url('Kingthings_Spikeless-webfont.ttf') format('truetype'),
-         url('Kingthings_Spikeless-webfont.svg#kingthings_spikelessregular') format('svg');
+    src: url('Kingthings_Spikeless-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
