--- a/ny/group3/CSS/news.css
+++ b/ny/group3/CSS/news.css
@@ -6,6 +6,12 @@
     color: #000000; 
   }
 
+.section-6{
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+
 .section-news{
     display: flex;
     flex-wrap: wrap;
