--- a/ny/group2/artsstyle.css
+++ b/ny/group2/artsstyle.css
@@ -1,53 +1,93 @@
 .opnion-footer{
     display: flex;
     justify-content: space-between;
+    margin-top: 25px;
     
+}
+
+.img1{
+    width: 230px;
 }
 
 .arts{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-
-}
-
-.arts-d{
-    padding: 0 8px 0 0;
-    max-width: 25%;
-    width: 100%;
+    margin-top: 25px;
 }
 
 .arts-one{
     display: flex;
     justify-content: space-between;
-    padding: 0 8px 0 0;
-    max-width: 25%;
-    
-}
-
-.arts-two-d{
-    padding: 0 8px 0 0;
-    max-width: 25%;
-    width: 100%;
+    margin-top: 25px;
 }
 
 .arts-two{
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    justify-content: normal;
+    margin-top: 25px;
 }
 
-.living-section{
-    background-color: darkgoldenrod;
+.arts-d{
+    width: 100%;
+    max-width: 25%;
+    padding: 10px 10px;
+
 }
 
- .living-section-one{
+.arts-two-d{
+    width: 80%;
+    max-width: 20%;
+    padding: 10px 10px;
+    margin-top: 25px;
+}
+
+.living-section-one h3{
+    height: 50px;
+}
+
+.img2{
+    width: 230px;
+}
+
+.img3{
+    width: 230px;
+}
+
+.living-section-one{
     display: flex;
     justify-content: space-between;
+    margin-top: 25px;
 }
 
 .living-section-two{
     display: flex;
-    justify-content: space-between;
-    width: 50%;
+    justify-content: normal;
+    margin-top: 25px;
+}
+
+.img4{
+    width: 230px;
+}
+
+.img5{
+    width: 230px;
+}
+
+.opinions-f-div{
+    width: 100%;
+    max-width: 25%;
+    padding: 10px 10px;
+}
+
+.living-one-div{
+    width: 60%;
+    max-width: 20%;
+    padding: 10px 10px;
+}
+
+.living-two-div{
+    width: 80%;
+    max-width: 20%;
+    padding: 10px 10px;
 }
