--- a/ny/group1/css/paid.css
+++ b/ny/group1/css/paid.css
@@ -14,6 +14,7 @@
 }
 
 .paid-txt{
+    margin: 10px;
     padding: 0;
     width: 246px;
 }
@@ -21,4 +22,8 @@
 .paid-anunce{
     display: flex;
     align-items: flex-end;
+}
+
+.T-paid{
+    margin: 10px 0 15px 0;
 }
