--- a/ny/group2/css/style.css
+++ b/ny/group2/css/style.css
@@ -1,747 +1,3 @@
-*,
-*::before,
-*::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-:root{
-    --title-color: rgb(0, 0, 0);
-    --text-color: rgb(87, 86, 86);
-    --background-color: rgb(245, 245, 245);
-    --color-button-hover: rgb(235, 235, 235);
-    --primary-font: 500 1rem/1.5 'Source Sans Pro', sans-serif;
-    --serif-font: 500 1rem/1.5 'Crimson Text', serif;
-    --title-font: 400 1rem/1.5 'kingthings_spikelessregular', serif;
-    --news-title-font: 600 1rem/1.5 'Josefin Slab', serif;
-    --news-font: 500 1rem/1.5 'Josefin Slab', serif;
-}
-
-h1, h2, h3,
-h4, h5, h6 {
-    font-size: inherit;
-    font-weight: inherit;
-    color: var(--title-color);
-}
-
-h3{
-    font: var(--news-title-font);
-    font-weight: 700;
-    font-size: 1.1rem;
-}
-
-p{
-    font: var(--serif-font);
-    font-size: 1rem;
-}
-
-a{
-    color: inherit ;
-    text-decoration: none;
-    padding: 5px 0;
-}
-
-a:hover{
-    background-color: var(--color-button-hover);  
-}
-
-body{
-    max-width: 1280px;
-    width: 100%;
-    margin: 0 auto;
-    background-color: var(--background-color);
-    font: var(--primary-font);
-    color: var(--text-color);
-    font-size: 16px;
-
-}
-
-.title-header{
-    display: flex;
-    justify-content: space-between;
-    padding: 30px 0; 
-}
-
-.title-header__h1{
-    font: var(--title-font);
-    font-size: 4rem;
-}
-
-.navbar{
-    padding: 0 60px;
-    border-top: 1px solid rgb(190, 190, 190);
-}
-
-.navigation-menu-header{
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    padding: 10px 0;
-}
-
-.navigations-header{
-    height: 15px;
-    margin-top: 1px;
-    font: var(--primary-font);
-    font-size: 0.75rem;
-}
-
-.container-links-header{
-    display: flex;
-    font-size: 14px; 
-    padding: 8px 0;
-    border-top: 1px solid rgb(0, 0, 0);
-    border-bottom: 4px double rgba(0, 0, 0);
-}
-
-.links-header{
-    max-width: 33.33%;
-    display: flex;
-    flex: 1;
-}
-
-.divider{
-    position: relative;
-    height: 50px;
-    width: 1px;
-    background: rgb(209, 209, 209);
-    margin: 3px 15px 0 0;
-}
-
-.img-header{
-    width: 50px;
-}
-
-.hr-header-links{
-    height: 60px;
-    border-right: 1px solid rgb(218, 218, 218);
-    margin-top: 5px;
-}
-
-.text{
-    display: flex;
-    flex-direction: column;
-    padding: 0 8px 0 8px;
-    justify-content: center;
-}
-
-.text-links-header__h3{
-    font-weight: 700;
-}
-
-.first-page-news{
-    display: flex;
-    position: relative;
-    padding: 20px 0 0 0;
-}
-
-.principal-news{
-   display: flex;
-   flex-direction: column;
-   flex: 1;
-   max-width: 30%;
-   width: 100%;
-   padding: 0 0 0 0;
-}
-
-.principal-news__h2{
-    font: var(--news-title-font);
-    font-size: 1.5rem;
-    font-weight: 700;
-    text-align: center;
-}
-
-.principal-news__h3{
-    font: var(--serif-font);
-    font-weight: 600;
-    text-align: center;
-    padding: 0px 50px;
-}
-
-.principal-news__ul{
-    list-style-type: none;
-    font: var(--serif-font);
-}
-
-.principal-news__ul--li{
-    padding: 0 16px 0 0;
-}
-
-.live-updates{
-    max-width: 40%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    padding: 0 10px;
-}
-
-.live-updates__p{
-    font: var(--primary-font);
-    font-size: 0.90rem;
-    font-weight: 700;
-    padding: 0 0 16px 0;
-}
-
-.live-updates__ul{
-    display: flex;
-    list-style-type: none;
-}
-
-.live-updates__ul--li{
-    align-self: center;
-}
-
-.live-updates img{
-    object-fit: cover;
-    max-width: 100%;
-    width: 100%;
-    display: none;
-}
-
-.live-updates img.active{
-    display: block;
-
-}
-
-.live-update-primaries-container-old-news{
-    display: flex;
-    align-items: center;
-    vertical-align: center;
-    padding: 8px 0 0 0;
-}
-
-.live-update-primaries__span{
-    font-weight: 700;
-    font-size: 0.750rem;
-    color: rgb(185, 3, 3);
-    padding-right: 8px;
-    min-width: 60px;
-}
-
-.live-updates-divider{
-    width: 1px;
-    max-height: 95%;
-    height: 100%;
-    background-color: #ccc;
-    position: absolute;
-    right: 0;
-}
-
-.some-other-news{   
-    max-width: 30%;
-    width: 100%;
-    padding: 0 0 0 16px;
-}
-
-.some-other-news__h2{
-    font: var(--news-title-font);
-    font-size: 1.1rem;
-    font-weight: 700;
-    padding: 0 0 8px 0;
-}
-
-.some-other-news__p{
-    font: var(--serif-font);
-    font-size: 1rem;
-    padding: 0 0 16px 0;
-}
-
-.some-other-news-divider{
-    width: 100%;
-    height: 1px;
-    margin: 8px 0;
-    background-color: #ccc;
-}
-
-.some-other-news-divider:last-of-type{
-    display: none;
-}
-
-.divider-medium{
-    height: 2px;
-    width: 74%;
-    background-color: rgb(0, 0, 0);
-    margin: 40px 0 0 0;
-}
-
-.grid-teste{
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr;
-}
-
-.live-news-opnion{
-    display: flex;
-    flex-direction: row;
-    padding: 15px 0 0 0;
-}
-
-.live{
-    max-width: 75%;
-    width: 100%;
-}
-
-.live-h4{
-    font: var(--serif-font);
-    color: rgb(185, 3, 3);
-    font-weight: 600;
-}
-
-.live-new-first-row{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    position: relative;
-
-}
-
-.live-news-first-row-col{
-    display: flex;
-    flex-direction: column;
-    max-width: 45%;
-    width: 100%;
-}
-
-.live-news-first-row-col2{
-    display: flex;
-    flex-direction: column;
-    max-width: 50%;
-    width: 100%;
-}
-
-.live-news-divider{
-    width: 1px;
-    height: 120%;
-    position: absolute;
-    top: -24px;
-    right: 53%;
-    background: #ccc;
-}
-
-.live-big-col-divider{
-    height: 2px;
-    background-color: rgb(0, 0, 0);
-    width: 99%;
-    margin: 16px 0
-}
-
-.live-big-col-divider.small-margin:last-of-type{
-    display: none;
-}
-
-.row-3{
-    display: flex;
-    flex-direction: row;
-}
-
-.live-big-col{
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    max-width: 67%;
-    width: 100%;
-}
-
-.live-big-col-news{
-    display: flex;
-    flex-direction: column;
-    max-width: 70%;
-    padding: 0 16px 0 0;
-}
-
-.live-big-col-image{
-    padding: 0 16px 0 0;
-}
-
-.live-big-col-row-divider{
-    width: 1px;
-    height: 98%;
-    position: absolute;
-    background-color: #ccc;
-    right: 0%;
-}
-
-.live-small-col{
-    display: flex;
-    flex-direction: column;
-    max-width: 30%;
-    width: 100%;
-    padding: 0 0 0 16px;
-}
-
-.third-section-news{
-    width: 100%;
-}
-
-.third-section-news-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 0 8px 0 0;
-}
-
-.third-section-news-container__h4{
-    font: var(--serif-font);
-    color: var(--text-color)
-}
-
-.third-section-news-title-subtitle{
-    max-width: 30%;
-    width: 100%;
-}
-
-.third-section-news-container:first-of-type{
-    padding-top: 8px;
-}
-
-.third-section-news-container-image{
-    padding: 0 0 0 16px;
-}
-
-.third-section-news-container-news{
-    max-width: 20%;
-    min-width: 0%;
-}
-
-.third-section-news-container__p{
-    font: var(--primary-font);
-    font-size: 0.850rem;
-}
-
-.opnion{
-    max-width: 25%;
-    width: 100%;
-    position: relative;
-}
-
-.hr{
-    width: 100%;
-    display: inline-block;
-    border: 1px solid #ccc;
-}
-
-.hr:last-of-type{
-    display: none;
-}
-
-.opnion-divider{
-    height: 2px;
-    width: 100%;
-    background: rgb(0, 0, 0);
-    position: absolute;
-    top: -17px;
-    right: 0;
-}
-
-.opnion-first-row{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    padding: 0 0 16px 0;
-    border-bottom: 1px solid rgb(148, 148, 148);
-}
-
-.opnion-first-row-fc{
-    grid-column-start: 1;
-    grid-column-end: 1;
-}
-
-.opnion-author{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 12px 0 0;
-}
-
-.opnion-author__h4{
-    font: var(--serif-font);
-    font-size: 0.900rem;
-    color: var(--text-color);
-}
-
-.opnion-author-avatar>img{
-    object-fit: cover;
-    border-radius: 50px;
-}
-
-.the-opnion__h3{
-    font: var(--serif-font);
-    font-size: 0.850rem;
-    font-weight: 700;
-}
-
-.the-opnion__p{
-    font: var(--serif-font);
-    font-size: 0.850rem;
-}
-
-.opnion-rows{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 16px 0 0 0;
-}
-
-.left-side-opnions{
-    max-width: 48%;
-    width: 100%;
-}
-
-.right-side-opnions{
-    max-width: 48%;
-    width: 100%;
-}
-
-.editors{
-    position: relative;
-    padding: 8px 0 0 0;
-}
-
-.opnion-divider.editor-sec{
-    top: 3px;
-}
-
-.editors__h3{
-    padding: 8px 0;
-}
-
-.editors-picks-first-row{
-    position: relative;
-}
-
-.editors-picks-first-row__h2{
-    font: var(--news-title-font);
-    font-size: 1.7rem;
-    line-height: 1;
-    padding: 16px 48px 16px 0;
-}
-
-.editors-picks-first-row__p{
-    padding: 0 0 16px 0;
-    line-height: 1;
-}
-
-.editors-one{
-    display: flex;
-    justify-content: space-between
-}
-
-.editors-one__h3{
-    font: var(--serif-font);
-    text-align: left;
-    padding: 0 16px 0 0;
-    line-height: 1;
-    color: var(--text-color);
-}
-
-.more-news-container{
-    border-top: 1px solid rgb(0, 0, 0);
-    margin-top: 16px;
-}
-
-.more-news-container-colum.pad{
-    padding: 8px 0 8px 16px;
-}
-
-.more-news-container-colum.bord{
-    object-fit: cover;
-    padding-right: 16px;
-    border-right: 1px solid #ccc;
-}
-
-.more-news-container__h3{
-    padding: 16px 0;
-}
-
-.more-news-container-flex{ 
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.more-news-container-left-side{
-    max-width: 75%;
-    width: 100%;
-    border-right: 1px solid #ccc;
-    padding: 0 16px 0 0;
-}
-
-.more-news-container-right-side{
-    max-width: 25%;
-    width: 100%;
-    padding: 0 0 0 8px;
-}
-
-.more-news__h2{
-    font: var(--news-title-font);
-    font-size: 1rem;
-    font-weight: 700;
-}
-
-.more-news__h2.first{
-    font-size: 1.3rem;
-}
-
-.more-news-container-colum{
-    display: flex;
-    flex-direction: column;
-}
-
-.bordbottom{
-    border-bottom: 1px solid #ccc;
-}
-
-.bordbottom:last-of-type{
-    border: none;
-}
-
-.first-row-content{
-    display: flex;
-    padding-bottom: 16px;
-    flex-direction: row;
-    justify-content: space-between;
-    border-bottom: 1px solid #ccc;
-}
-
-.second-row-content{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 16px 0;
-}
-
-.more-news-container-colum.pad-left{
-    padding: 0 0 0 16px;
-}
-
-.more-news-container-colum.bord-right{
-    border-right: 1px solid #ccc;
-}
-
-.more-news-full-row{
-    background-color: rgb(235, 21, 153);
-    height: 100%
-}
-
-.colum-one{
-   width: 75%; 
-}
-.colum-two{
-    width: 25%;
-}
-.colum-three{
-    display: flex;
-    justify-content: space-between;
-}
-.paid-post{
-    background-color: rgb(231, 235, 39);
-}
-.womans-healt{
-    background-color: rgb(46, 236, 29);
-    display: flex;
-    justify-content: space-between;
-}
-.features{
-    display: flex;
-    justify-content: space-between;
-}
-.features-main{
-    background-color: dimgrey;
-    width: 50%;
-}
-.features-right-side{
-    background-color: indianred;
-    width: 50%;
-}
-
-.features-right-side-one{
-    display: flex;
-    justify-content: space-between;
-}
-
-.features-right-side-two{
-    display: flex;
-    justify-content: space-between;
-}
-
-.nyt-cooking{
-    display: flex;
-    justify-content: space-between;
-    background-color: khaki;
-}
-
-.science-and-health{
- display: flex;
- justify-content: space-between;
-}
-
-.first-col{
-    background-color: lightskyblue;
-    width: 50%;
-}
-
-.second-col{
-    background-color: limegreen;
-    width: 50%;
-}
-
-.third-col{
-    background-color: mediumorchid;
-}
-
-.full-row{
-    background-color: mediumturquoise;
-    height: 100%;
-}
-
-.science-and-health-one{
-    width: 75%;
-}
-
-.science-and-health-two{
-    width: 25%;
-}
-
-.science-and-health-three{
-    display: flex;
-    justify-content: space-between;
-}
-
-.play-section{
-    background-color: burlywood;
-    display: flex;
-    justify-content: space-between;
-}
-
-.popular-in-the-times{
-    background-color: rgb(163, 222, 135);
-    display: flex;
-    justify-content: space-between;
-}
-
-.news{
-    background-color: coral;
-
-}
-
-.news-one{
-    display: flex;
-    justify-content: space-between;
-}
-
-.news-two{
-    display: flex;
-    justify-content: space-between;
-}
-
-.news-three{
-    display: flex;
-    justify-content: space-between;
-    width: 75%;
-}
+@import url("./reset.css");
+@import url("./header_style.css");
+@import url("./alisson_section_style.css");
