--- a/ny/group2/css/style.css
+++ b/ny/group2/css/style.css
@@ -43,19 +43,17 @@ body{
     font: var(--primary-font);
     color: var(--text-color);
     font-size: 16px;
-
 }
 
 .title-header{
     display: flex;
-    justify-content: space-between;
     padding: 30px 0; 
 }
 
 .title-header__h1{
     font: var(--title-font);
     font-size: 4rem;
-}
+    margin-left: 20%}
 
 .navbar{
     padding: 0 60px;
