chore: css news

--- a/ny/group1/css/footer.css
+++ b/ny/group1/css/footer.css
@@ -2,6 +2,7 @@ footer {
     display: flex;
     flex-direction: column;
     font-family: nyt-franklin, helvetica, arial, sans-serif;
+    padding-top: 20px;
 }
 
 footer::before {
