--- a/ny/group2/css/style.css
+++ b/ny/group2/css/style.css
@@ -1,3 +1,7 @@
 @import url("./reset.css");
 @import url("./header_style.css");
 @import url("./alisson_section_style.css");
+@import url("./douglas-section.css");
+@import url("./footer-style.css");
+@import url("./style-science--news.css");
+@import url("./artsstyle.css");
