--- a/projects/crypto-currency/iluminados/app/src/commons/global.css
+++ b/projects/crypto-currency/iluminados/app/src/commons/global.css
@@ -23,11 +23,14 @@ a{
 
 :root{
   --purple: #4A314D;
+  --light-purple: #9001a0;
   --black: #231A1A;
+  --gray: rgb(131, 131, 131);
   --green: #02ff81;
   --yellow: #ffc60a;
   --blue: #273cf5;
   --red: #C3423F;
+  --light-red: #fd8684;
   --white: #FFF0FB;
   --primary-font-family: 'Montserrat', sans-serif;
   --secondary-font-family: 'Martel', serif;
