--- a/projects/crypto-currency/iluminados/app/src/commons/global.css
+++ b/projects/crypto-currency/iluminados/app/src/commons/global.css
@@ -23,16 +23,13 @@ a{
 
 :root{
   --purple: #4A314D;
-  --light-purple: #9001a0;
-  --black: #050301;
-  --gray: rgb(131, 131, 131);
+  --black: #231A1A;
   --green: #02ff81;
-  --yellow: #f59c17;
-  --yellow-hover: #ec8e00;
+  --yellow: #ffc60a;
   --blue: #273cf5;
-  --red: #f72c28;
-  --light-red: #ff7370;
-  --white: #F7F4F3;
+  --red: #C3423F;
+  --white: #FFF0FB;
   --primary-font-family: 'Montserrat', sans-serif;
   --secondary-font-family: 'Martel', serif;
+  --gradient: linear-gradient(120deg, #C3423F, #4A314D);
 }
